1998-10-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Don't fail if jadetex or dvips are missing,
	but do issue a warning.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* common.dsl: Revert 1998-09-15 change; it's needed in order
	to get revision histories for each module.

	* macros.tex: Disable insertParagraphBreak, PageColumnSep, lt, gt,
	Entity, endDisplayNIC, and insertExternalGraphic, since they
	appear to be fixed with jadetex 2.2.

	* docbook.dcl (TAGLEN, ATTSPLEN): Increase to 1886.

1998-09-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Add notes for 1.3 and 1.3.1.

	* print.dsl (reference-titlepage-recto-mode): Wrap title element
	with a display-group with a break-before: 'page.  This is to get
	modules starting on odd pages (along with change below).

	* macros.tex: Redefine \Break@page to call cleardouble page
	(an abuse).

	* common.dsl: Remove reference-titlepage-{recto,verso}-elements.

	* Makefile.am (EXTRADIST): Add macros.tex.

	* configure.in (VERSION): Bump to 1.3.1.

1998-09-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules (CATOPTS): Use `catalog' instead of `CATALOG' for
	DocBook style sheets.  

	* macros.tex (resetHeadersAndFooters): New macro to clear all
	the headers and footers.
	(endSpS): New macro (overrides jadetex) and adds a call to
	resetHeadersAndFooters.
	(PageColumnSep): Define a default of 18pt.

	* Makefile.am (html dvi rtf fot ps htmldist dvidist rtfdist
	psdist): Use $(MAKE) instead of make.

1998-09-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.common: Export SWARMSRCDIR to run of history.el.

	* configure.in: Escape $SWARMSRCDIR and $(swarm_srcdir) in 
	help text.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* history.el (process-changelog): Sort combined list by timestamp.

	* docbook.dcl (TAGLEN, ATTSPLEN): Increase to 1849.

	* Makefile.am: Use first line of VERSION, so as to avoid subminor.
