@@ -1,4 +1,4 @@
-SUBDIRS = figs refbook installbook overbook set
+SUBDIRS = figs refbook installbook overbook set m4
 EXTRA_DIST = Makefile.common Makefile.rules common.el history.el protocol.el common.dsl html.dsl print.dsl global.ent docbook.dcl macros.tex
 
 all-recursive-am: versions.ent
